리덕스적용

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -15,6 +15,11 @@
 <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 <![endif]-->
 
+    <script type="text/javascript" src="./script/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="./script/realgridjs-lic.js"></script>
+    <script type="text/javascript" src="./script/realgridjs_eval.1.1.17.min.js"></script>
+    <script type="text/javascript" src="./script/realgridjs-api.1.1.17.js"></script>
+
 <title>Horizon</title>
 <link href="css/nanumsquare.css" rel="stylesheet" type="text/css">
 <link href="css/common.css" rel="stylesheet" type="text/css">
